@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated French, Italian translations; thanks to Zabbix tra
 ..F....... [ZBX-11136] increased width of input fields (Sasha)
 
 Bug fixes:
+........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
 ........S. [ZBX-11250] fixed trigger update after executing event correlation 'close new' operation (wiper)
 .......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
 .......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
@@ -178,6 +179,7 @@ A.F....... [ZBX-1357] updated Chinese (China), French, German, Korean, Persian t
 ...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)
 
 Bug fixes:
+........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
 .......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
 .......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
 ....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
@@ -1652,6 +1654,7 @@ New features:
 ...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)
 
 Bug fixes:
+........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
 .......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
 .......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
 ....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
